# 3D-Pinball

./: README.md
SpaceCadetPinball/: control.cpp  partman.cpp  pb.cpp  pb.h  pinball.cpp
app/: build.gradle
app/release/: output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  SpaceCadetPinballJNI.cpp
app/src/main/cpp/SDL/: CMakeLists.txt
app/src/main/cpp/SDL/VisualC-WinRT/: SDL-UWP.vcxproj  SDL-UWP.vcxproj.filters
app/src/main/cpp/SDL/build-scripts/: winrtbuild.ps1
app/src/main/cpp/SDL/src/main/windows/: version.rc
app/src/main/cpp/SDL_mixer/: CHANGES.txt  CMakeLists.txt  version.rc
app/src/main/cpp/SDL_mixer/VisualC/: SDL_mixer.vcxproj  Version.rc
app/src/main/cpp/SDL_mixer/cmake/: FindFLAC.cmake  FindMPG123.cmake  Findmodplug.cmake  Findopusfile.cmake  Findvorbisfile.cmake
app/src/main/java/com/cyberdaystudio/games/spacecadetpinball/: GameState.java  HighScoreHandler.java  JNIEntryPoint.java  MainActivity.java  Settings.java  StateHelper.java
app/src/main/res/layout/: activity_main.xml  activity_settings.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
